[project]
name = "tradeflows"
version = "0.1.0"
requires-python = ">=3.10"

[project.scripts]
tradeflows = "tradeflows_cli.tradeflows_cli:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["tradeflows_cli"]
py-modules = ["comtrade_datafetch"]
